fixed z-index

--- a/packages/toast/src/index.scss
+++ b/packages/toast/src/index.scss
@@ -3,7 +3,7 @@
 .hawk-toast {
 	box-sizing: border-box;
 	position: fixed;
-  z-index: 1;
+  z-index: 2;
   &__hidden {
     display: none;
   }
